changed Organizing secretary

--- a/Committee.html
+++ b/Committee.html
@@ -205,16 +205,16 @@
                             <div class="panel-heading">
                                 <h4 class="panel-title">
                                     <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion1" href="#accordion1_5">
-                                    Organising secretary
+                                    Organizing secretary
                                     </a>
                                 </h4>
                             </div>
                             <div style="height: 0px;" id="accordion1_5" class="panel-collapse collapse">
                                  <div class="panel-body">                                    
                                     <ul>									 
-                                        <li><b>Dr. D.V Sunitha</b>, Head - Department of Physical Sciences, SoAS, REVA University</li> 
-										<li><b>Mobile:</b> +91-7760884884</li>
-                                        <li><b>Email:</b><a href="mailto: sunitha.dv@reva.edu.in">sunitha.dv@reva.edu.in</a></li>
+                                        <li><b>Dr. D.V Sunitha</b>, Head - Department of Physical Sciences, SoAS, REVA University<br>
+										<b>Mobile:</b> +91-7760884884<br>
+                                        <b>Email:</b> <a href="mailto: sunitha.dv@reva.edu.in">sunitha.dv@reva.edu.in</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -234,7 +234,7 @@
 										<li><b>Dr. Madesh Kumar</b>, Professor, Department of Physical Sciences</li>
 										<li><b>Dr. Dr. Rajavaram Ramaraghavulu</b>, Assistant Professor, Department of Physical Sciences</li>
 										<li><b>Dr. Ganesh Shridhar Hegde</b>, Assistant Professor, Department of Physical Sciences</li> 										
-										<li><b>Dr. Nagaraju D.H, Professor</b>, Department of Chemical Sciences</li>
+										<li><b>Dr. Nagaraju D.H</b>, Professor, Department of Chemical Sciences</li>
 										<li><b>Dr. Srinivas M</b>, Assistant Professor, Department of Chemical Sciences</li>
 										<li><b>Dr. Shivanna M</b>, Associate Professor, Department of Chemical Sciences</li>
 										<li><b>Dr.Senthilkumar R</b>, Associate Professor, Department of Biological Science</li>
