changed N&I advisory members

--- a/Committee.html
+++ b/Committee.html
@@ -257,22 +257,22 @@
                                  <div class="panel-body">                                    
                                     <ul>
 									<div class="col-md-6"> 
-                                        <li><b>Dr. Reji Philips</b>, Professor, Raman Research Institute, Bengaluru.</li>  
-										<li><b>Dr. Akshay Naik</b>, Associate Professor, CeNSE, Indian Institute of Science, Bengaluru.</li>
-										<li><b>Dr. Girish Gowda</b>, Division Head, Thin Films Division Laboratory for Electro-Optics Systems (LEOS) ISRO, Dept. of Space, Govt. of India..</li> 
-										<li><b>Chandrabhas Narayana</b>, Director, Rajiv Gandhi Centre for Biotechnology, Thycaud P O, Thiruvananthapuram 695014.</li>
-										<li><b>Prof. Jagadeesh Rajenahally</b>, Group Leader “Synergy between Homogeneous and Heterogeneous Catalysis”, Leibniz Institute for Catalysis, Rostock, Germany.</li>  
-										<li><b>Dr. Pavan Kumar</b>, Senior Scientist, Chemistry & IP, CSIR Institute.</li>
+                                        <li><b>Dr. Reji Philips</b>, Professor, Raman Research Institute, Bengaluru</li>  
+										<li><b>Dr. Akshay Naik</b>, Associate Professor, CeNSE, Indian Institute of Science, Bengaluru</li>
+										<li><b>Dr. Girish Gowda Division Head</b>, Thin Films Division Laboratory for Electro-Optics Systems (LEOS) ISRO, Dept. of Space, Govt. of India</li> 
+										<li><b>Dr. Chandrabhas Narayana</b>, Director, Rajiv Gandhi Centre for Biological Science, Thycaud P O, Thiruvananthapuram</li>
+										<li><b>Prof. Jagadeesh</b>, Rajenahally Group Leader “Synergy between Homogeneous and Heterogeneous Catalysis”, Leibniz Institute for Catalysis, Rostock, Germany</li>  
+										<li><b>Dr. Pavan Kumar</b>, Senior Scientist, Chemical Sciences & IP, CSIR Institute</li>
                                         <li><b>Dr. Sanjeev P</b>, Maradur Associate Professor, Materials Science Division, PPISR, Devenahalli, Chikkaballapur, Karnataka.</li>
-                                        <li><b>Dr. Arun Mohan</b>, Isloor Professor, Professor & Head, Department of Chemistry, National Institute of Technology-Karnataka, Surathkal.</li>
+                                        <li><b>Dr. Arun Mohan Isloor</b>, Professor & Head, Department of Chemical Sciences, National Institute of Technology-Karnataka, Surathkal</li>
                                     </div>
                                     <div class="col-md-6">                                        
-                                        <li><b>Dr. Bony De Kumar</b>, Director of Operations, Yale Genome Analysis Center, Yale University, Connecticut, USA.</li>
-                                        <li><b>Dr. Nellaiah Hariharan Head</b>, R & D and Training, Bangalore Biotech Labs. Pvt. Ltd. (BiOZEEN) Bengaluru, Karnataka, India.</li>
-                                        <li><b>Prof. Sreeramanan Subramaniam</b>, School of Biological Sciences & Centre for Chemical Biology (CCB), Universiti Sains Malaysia (USM), Penang, Malaysia.</li>
-                                        <li><b>Prof. Kondaiah</b>, Emiretus Professor, Indian Institute of Sciences, (IISc), Bangalore.</li>
-                                        <li><b>Dr. Kumar Kothapalli</b>, Dell Medical School, The University of Texas at Austin, USA.</li>
-                                        <li><b>Dr. Dinesh Rangappa</b>, Professor, Department of Applied Sciences, Nanotechnology, Visvesvaraya Technological University, Chikkaballapura, Karntataka, India</li>										
+                                        <li><b>Dr. Bony De Kumar</b>, Director of Operations, Yale Genome Analysis Center, Yale University, Connecticut, USA</li>
+                                        <li><b>Dr. Nellaiah Hariharan Head</b>, R & D and Training, Bangalore Biotech Labs. Pvt. Ltd. (BiOZEEN) Bengaluru, Karnataka, India</li>
+                                        <li><b>Prof. Sreeramanan Subramaniam</b>, School of Biological Sciences & Centre for Chemical Biology (CCB), Universiti Sains Malaysia (USM), Penang, Malaysia</li>
+                                        <li><b>Prof. Kondaiah</b>, Emiretus Professor, Indian Institute of Sciences, (IISc), Bangalore</li>
+                                        <li><b>Dr. Kumar Kothapalli</b>, Dell Medical School, The University of Texas at Austin, USA</li>
+                                        <li><b>Dr.Dinesh Rangappa</b>, Professor, Department of Applied Sciences, Nanotechnology, Visvesvaraya Technological University, Chikkaballapura, Karntataka, India</li>										
 									</div>                                      
                                   </ul>
                                </div>
