--- a/theme.html
+++ b/theme.html
@@ -61,7 +61,7 @@
                 <!-- BEGIN TOP BAR LEFT PART -->
                 <div class="col-md-6 col-sm-6 additional-shop-info">
                     <ul class="list-unstyled list-inline">
-                        <li><i class="fa fa-phone"></i><span>+91-9844158444</span></li>
+                        <li><i class="fa fa-phone"></i><span>+91-8277049441</span></li>
                         <li><i class="fa fa-envelope-o"></i><span>conference.soas@reva.edu.in</span></li>
                     </ul>
                 </div>
@@ -136,37 +136,24 @@
                             <div class="panel-heading">
                                 <h4 class="panel-title">
                                     <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion1" href="#accordion1_1">
-                                    Biotechnology
+                                      Physical Sciences
                                     </a>
                                 </h4>
                             </div>
                             <div style="height: 0px;" id="accordion1_1" class="panel-collapse collapse">
                                 <div class="panel-body">
 								 <div class="col-md-6">
-                    <li>Microbial Technology</li> 									    
-									  <li>Regenerative medicine and Stem</li>  
-									  <li>Cell Biology</li>
-                    <li>Agricultural Biotechnology</li>
-                    <li>Nano-biotechnology</li>  									    
-									  <li>Genetics and Molecular Biology</li>
-                    <li>Cancer Biology and therapy</li>  									  
-									  <li>Environmental bioremediation</li>  
-									  <li>Toxicology & Animal studies</li>  
-									  <li>Antimicrobial peptides and therapies</li>
+                    <li>Laser Science and Technologies</li> 									    
+									  <li>Nano and Bio Photonics</li>  
+									  <li>Luminescence-Materials and Applications</li>
+                    <li>Carbon-based materials</li>
+                    <li>Radiation effect on materials</li>  									    
+									  <li>GCeramics</li>
+                    <li>Dielectrics and Ferroelectric Materials</li>  									  
+									  <li>Thin Films and Related Technologies</li>  
+									  <li>Photovoltaic Materials and Cells</li>  
+									  <li>Materials for space applications</li>
 								 </div>
-									<div class="col-md-6">  
-									 <li>Immunology</li>  
-									 <li>Vaccine development</li>  
-									 <li>Developmental biology</li> 
-									 <li>Computational Biology and Bioinformatics</li> 
-									 <li>Genomics and Proteomics</li> 
-									 <li>Molecular pharmacology</li>  
-									 <li>Biomedicine</li> 
-									 <li>Nanotechnology & Drug development</li>  
-									 <li>Food and Nutrition</li>  
-									 <li>Health and Disease Management</li> 
-									 <li>Infectious Diseases</li>
-									</div>
                                     </ul>
                                 </div>
                             </div>
@@ -175,7 +162,7 @@
                             <div class="panel-heading">
                                 <h4 class="panel-title">
                                     <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion1" href="#accordion1_3">
-                                    Chemistry
+                                      Biological Science
                                     </a>
                                 </h4>
                             </div>
@@ -183,24 +170,29 @@
                                  <div class="panel-body">                                    
                                     <ul>
 									<div class="col-md-6"> 
-                    <li>Green Chemistry</li> 
-										<li>Medicinal Chemistry</li>
-										<li>Total Synthesis</li> 
-										<li>Crystallography</li> 
-										<li>Polymorphism</li> 
-										<li>Catalytic Materials for Energy</li> 
-										<li>Batteries</li> 
-										<li>Sensors</li>
+                    <li>Microbial Technology</li> 
+										<li>Regenerative medicine and Stem</li>
+										<li>Cell Biology</li> 
+										<li>Agricultural Biological Science</li> 
+										<li>Genetics and Molecular Biology</li> 
+										<li>Toxicology & Animal studies</li> 
+										<li>Immunology</li> 
+										<li>Developmental biology</li>
+                    <li>Genomics and Proteomics</li>
+                    <li>Biomedicine</li>
+                    <li>Infectious Diseases</li>
 									</div>
 									<div class="col-md-6"> 
-										<li>Environment</li>
-										<li>Nanomaterials</li> 
-										<li>Self-Assembly</li> 
-										<li>Polymer Chemical biology</li> 
-										<li>Electro kinetics</li> 
-										<li>Organic Electronics</li> 
-										<li>Reverse Osmosis</li> 
-										<li>Nano Filtration & Ultra Filtration membrane.</li>  
+										<li>Biopharmaceutical and drug discovery</li>
+										<li>Nano-Biological Science</li> 
+										<li>Cancer Biology and therapy</li> 
+										<li>Environmental bioremediation</li> 
+										<li>Antimicrobial peptides and therapies</li> 
+										<li>Vaccine development</li> 
+										<li>Computational Biology and Bioinformatics</li> 
+										<li>Molecular pharmacology</li>  
+                    <li>Nanotechnology & Drug development</li>
+                    <li>Health and Disease Management</li>
 									</div>                                      
                                     </ul>
                                 </div>
@@ -210,7 +202,7 @@
                             <div class="panel-heading">
                                 <h4 class="panel-title">
                                     <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion1" href="#accordion1_5">
-                                    Physics
+                                      Chemical Sciences
                                     </a>
                                 </h4>
                             </div>
@@ -218,19 +210,24 @@
                                  <div class="panel-body">                                    
                                     <ul>
 									<div class="col-md-6"> 
-                                        <li>Laser Science and Technologies</li> 
-										<li>Nano and Bio Photonics</li>
-										<li>Luminescence-Materials and Applications</li> 
-										<li>Carbon-based materials</li> 
-										<li>Radiation effect on materials</li> 
-										
+                    <li>Green Chemical Sciences</li> 
+										<li>Total Synthesis</li>
+										<li>Polymorphism</li> 
+										<li>Batteries</li> 
+										<li>Environment</li> 
+										<li>Self-Assembly</li>
+                    <li>Electro kinetics</li>
+                    <li>Reverse Osmosis</li>
 									</div>
 									<div class="col-md-6">
-										<li>Dielectrics and Ferroelectric Materials</li> 
-										<li>Ceramics</li> 
-										<li>Thin Films and Related Technologies</li> 
-										<li>Photovoltaic Materials and Cells</li>
-										<li>Materials for space applications</li>
+										<li>Medicinal Chemical Sciences</li> 
+										<li>Crystallography</li> 
+										<li>Catalytic Materials for Energy</li> 
+										<li>Sensors</li>
+										<li>Nanomaterials</li>
+                    <li>Polymer Chemical biology</li>
+                    <li>Organic Electronics</li>
+                    <li>Nano Filtration & Ultra Filtration membrane</li>
 									</div>                                      
                                   </ul>
                                </div>
