changed objectives and made them into bullets in home page

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <!-- BEGIN TOP BAR LEFT PART -->
                 <div class="col-md-6 col-sm-6 additional-shop-info">
                     <ul class="list-unstyled list-inline">
-                        <li><i class="fa fa-phone"></i><span>+91-9844158444</span></li>
+                        <li><i class="fa fa-phone"></i><span>+91-8277049441</span></li>
                         <li><i class="fa fa-envelope-o"></i><span>conference.soas@reva.edu.in</span></li>
                     </ul>
                 </div>
@@ -224,18 +224,19 @@
 			<h4><p>The 4<sup>th</sup> International Conference on &quot;Global Trends in Sustainable Technology and its Applications in Applied Sciences&quot; will be held on October 24-25, 2024. We look forward to seeing you at REVA University!</p></h4>
             <div class="content-page">              
 
-                    <!-- BEGIN INFO BLOCK -->               
-                    <p>The Organizing Committee invites you to the 4<sup>th</sup> International Conference at REVA University.</p>
-
-<p align="justify">School of Applied Sciences, REVA University welcomes you to the “Global trends in Sustainable Technology its Applications in Applied Sciences (ICGTSTAS-2024)”on 24th and 25th  October 2024 at REVA University, Bangalore. The international conference has been specifically designed with the intention of delivering outstanding outcomes and challenges in the Physical, Chemical, Mathematical, Biological, Medical and Health Science sectors. It intends to bring collectively researchers, scientists, technicians, and scholars in all fields of the applied sciences, medical and healthcare sector, for the propagation of original research conclusions, new approaches and developmental practices that yield real results. The conference theme “Global trends in Sustainable Technology its Applications in Applied Sciences (ICGTSTAS-2024)” is dedicated to bringing together a significant number of diverse scholarly events for presentation within the specified domains of conference. Participants will have an opportunity to interact with leading experts from their respective fields to bestow their research plans in different countries. With eminent International and National Speakers, the conference provides an exceptional value for students, academics, and industry experts and researchers. The conference aims to bring together leading scientists, researchers, and research scholars to exchange and share their experiences and research results on all aspects science. It also provides an interdisciplinary platform to present and discuss the most recent innovations, trends, and concerns as well as practical challenges encountered, and solutions adopted in the fields of Life Science, Chemical & Physical sciences, and Medial Sciences.</p>
-<p align="justify">To provide an international forum to exchange information, share experiences and research results from various specialized and interdisciplinary fields in Applied and Medical sector. To bring academicians, leading researchers, scholars as well as innovative practitioners from industry, onto common platform to share research knowledge, skills, and insights into promoting research and innovations. To provide a platform for participants to establish professional networks in their respective fields and to enhance collaborative research. </p>
-<p align="justify">Our conference agenda is to provide the right stage to present stimulating keynote talks, oral sessions,  poster presentations, enabling them to interact with conference visitors and speakers. </p>
-<p align="justify">We hope that you will join us and help us make this a very successful meeting with many interesting discussions!</p>
-
-<p align="justify"><b>On behalf of the Organizing Committee,</b><br>
-<b>Dr. D.V Sunitha</b><br>
-Head - Department of Physics, SoAS<br>
-REVA University, Bangalore-560064</p> 
+                  <!-- BEGIN INFO BLOCK -->               
+                  <p>The Organizing Committee invites you to the 4<sup>th</sup> International Conference at REVA University.</p>
+                  <p align="justify">School of Applied Sciences, REVA University welcomes you to the “Global trends in Sustainable Technology its Applications in Applied Sciences (ICGTSTAS-2024)”on 24th and 25th  October 2024 at REVA University, Bangalore. The international conference has been specifically designed with the intention of delivering outstanding outcomes and challenges in the Physical, Chemical, Mathematical, Biological, Medical and Health Science sectors. It intends to bring collectively researchers, scientists, technicians, and scholars in all fields of the applied sciences, medical and healthcare sector, for the propagation of original research conclusions, new approaches and developmental practices that yield real results. The conference theme “Global trends in Sustainable Technology its Applications in Applied Sciences (ICGTSTAS-2024)” is dedicated to bringing together a significant number of diverse scholarly events for presentation within the specified domains of conference. Participants will have an opportunity to interact with leading experts from their respective fields to bestow their research plans in different countries. With eminent International and National Speakers, the conference provides an exceptional value for students, academics, and industry experts and researchers. The conference aims to bring together leading scientists, researchers, and research scholars to exchange and share their experiences and research results on all aspects science. It also provides an interdisciplinary platform to present and discuss the most recent innovations, trends, and concerns as well as practical challenges encountered, and solutions adopted in the fields of Life Science, Chemical & Physical sciences, and Medial Sciences.</p>
+                  <p align="justify"><b>On behalf of the Organizing Committee,</b><br>
+                  <b>Dr. D.V Sunitha</b><br>
+                  Head - Department of Physics, SoAS<br>
+                  REVA University, Bangalore-560064</p>
+                  <h1 style="font:'Times New Roman', Times, serif">Objectives of the 4<sup>th</sup> International Conference</h1>
+                  <ul>
+                    <li>To provide an international forum to exchange information, share experiences and research results from various specialized and interdisciplinary fields in Applied and Medical sector</li>
+                    <li>To bring academicians, leading researchers, scholars as well as innovative practitioners from industry, onto common platform to share research knowledge, skills, and insights into promoting research and innovations</li>
+                    <li>To provide a platform for participants to establish professional networks in their respective fields and to enhance collaborative research</li>
+                  </ul>
           </div>          
           <!-- END CONTENT -->
         </div>        
