--- a/application.html
+++ b/application.html
@@ -8,7 +8,7 @@
 <!-- Head BEGIN -->
 <head>
   <meta charset="utf-8">
-  <title>ICGTAMH-2022</title>
+  <title>ICGTSTAS-2024</title>
 
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -79,7 +79,7 @@
                 <!-- BEGIN TOP BAR LEFT PART -->
                 <div class="col-md-6 col-sm-6 additional-shop-info">
                     <ul class="list-unstyled list-inline">
-                        <li><i class="fa fa-phone"></i><span>+91-9844158444</span></li>
+                        <li><i class="fa fa-phone"></i><span>+91-8277049441</span></li>
                         <li><i class="fa fa-envelope-o"></i><span>conference.soas@reva.edu.in</span></li>
                     </ul>
                 </div>
@@ -153,10 +153,10 @@
 			  For any registration queries and other payment methods like bank transfers and PayPal feel free to reach us at <a href="mailto:conference.soas@reva.edu.in" target="_blank">conference.soas@reva.edu.in</a><br>
 
 For any conference related queries feel free to reach us at <a href="mailto:conference.soas@reva.edu.in" target="_blank">conference.soas@reva.edu.in</a></p>
-<p>Application form link: <a href="https://forms.gle/cUpoabUrrwSp8YxCA" target="_blank">https://forms.gle/cUpoabUrrwSp8YxCA</a></p>
-<p> Join with WhatsApp Group only for the Conference registered participants <a href="https://chat.whatsapp.com/F2q4uy2A723JLFKAnh2IaK" target="_blank">(ICGTASMH-2022)</a></p>
+<p>Application form link: <a href="https://docs.google.com/forms/d/e/1FAIpQLSfTTRbGXoSDeZvBJ1jOtOa8VEgmFhlSFVqe6JCHJOYARAPkPw/viewform" target="_blank">Google Forms</a></p>
+<p> Join with WhatsApp Group only for the Conference registered participants <a href="https://chat.whatsapp.com/Ia1pbKoAuapLlyFsoXvt3c" target="_blank">ICGTSTAS-2024 WhatsApp Group</a></p>
 <div class="col-md-12">
-<p><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdctXf8G0fceXBjwoUg_tehi_P8IQdVROwjpAMFNVRtQTTYwA/viewform?embedded=true" width="640" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></p>
+<p><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfTTRbGXoSDeZvBJ1jOtOa8VEgmFhlSFVqe6JCHJOYARAPkPw/viewform?embedded=true" width="640" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></p>
 
 
 </div>
