changed text of links to be more descriptive

--- a/application.html
+++ b/application.html
@@ -153,10 +153,10 @@
 			  For any registration queries and other payment methods like bank transfers and PayPal feel free to reach us at <a href="mailto:conference.soas@reva.edu.in" target="_blank">conference.soas@reva.edu.in</a><br>
 
 For any conference related queries feel free to reach us at <a href="mailto:conference.soas@reva.edu.in" target="_blank">conference.soas@reva.edu.in</a></p>
-<p>Application form link: <a href="https://docs.google.com/forms/d/e/1FAIpQLSfTTRbGXoSDeZvBJ1jOtOa8VEgmFhlSFVqe6JCHJOYARAPkPw/viewform" target="_blank">Google Forms</a></p>
+<p>Application form link: <a href="https://docs.google.com/forms/d/e/1FAIpQLSfTTRbGXoSDeZvBJ1jOtOa8VEgmFhlSFVqe6JCHJOYARAPkPw/viewform" target="_blank">ICGTSTAS-2024 Application Forms</a></p>
 <p> Join with WhatsApp Group only for the Conference registered participants <a href="https://chat.whatsapp.com/Ia1pbKoAuapLlyFsoXvt3c" target="_blank">ICGTSTAS-2024 WhatsApp Group</a></p>
 <div class="col-md-12">
-<p><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfTTRbGXoSDeZvBJ1jOtOa8VEgmFhlSFVqe6JCHJOYARAPkPw/viewform?embedded=true" width="640" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></p>
+<p><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfTTRbGXoSDeZvBJ1jOtOa8VEgmFhlSFVqe6JCHJOYARAPkPw/viewform" width="640" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></p>
 
 
 </div>
