changed info on speakers page (not final images and extras need to be removed)

--- a/speakers.html
+++ b/speakers.html
@@ -8,7 +8,7 @@
 <!-- Head BEGIN -->
 <head>
   <meta charset="utf-8">
-  <title>ICGTAMH-2022</title>
+  <title>ICGTSTAS-2024</title>
 
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -79,7 +79,7 @@
                 <!-- BEGIN TOP BAR LEFT PART -->
                 <div class="col-md-6 col-sm-6 additional-shop-info">
                     <ul class="list-unstyled list-inline">
-                        <li><i class="fa fa-phone"></i><span>+91-9844158444</span></li>
+                        <li><i class="fa fa-phone"></i><span>+91-8277049441</span></li>
                         <li><i class="fa fa-envelope-o"></i><span>conference.soas@reva.edu.in</span></li>
                     </ul>
                 </div>
@@ -157,41 +157,41 @@
             <div class="owl-carousel owl-carousel4">
 			<div class="recent-work-item">
                 <em>
-                  <img src="assets/pages/img/Logo/show_1.jpg" height="250" width="80" alt="Pau-Loke SHOW">
+                  <img src="assets/pages/img/Logo/show_1.jpg" height="250" width="80" alt="Harish Barshilia">
 				  <a href="https://showpauloke.com" target="_blank"><i class="fa fa-link"></i></a>
                   <a href="assets/pages/img/Logo/show_1.jpg" class="fancybox-button" title="Prof. ls. Ts. Dr. Pau-Loke SHOW" data-rel="fancybox-button"><i class="fa fa-search"></i></a>                </em>
                 <a class="recent-work-description" href="javascript:;">
-                  <strong>Prof. ls. Ts. Dr. Pau-Loke SHOW</strong>
-                  <b>Professor of Biochemical Engineering</b><br>
-				  <b>Department of Chemical &amp; Environmental Engineering</b><br>
-				  <b>Faculty of Science and Engineering</b><br>
-     			  <b>University of Nottingham Malaysia</b>
+                  <strong>Harish Barshilia</strong>
+                  <b>Chief Scientist and Head</b><br>
+				          <b>Surface Engineering Division</b><br>
+				          <b>CSIR - National Aerospace,</b><br>
+                  <b>IndiaPhysical Sciences </b>
 
                 </a>
               </div>
               <div class="recent-work-item">
                 <em>
-                  <img src="assets/pages/img/Logo/ada.jpg" height="250" width="80" alt="Prof. Ada E. Yonath">
+                  <img src="assets/pages/img/Logo/ada.jpg" height="250" width="80" alt="P D Babu">
                   <a href="http://www.weizmann.ac.il/csb/faculty_pages/Yonath/" target="_blank"><i class="fa fa-link"></i></a>
                   <a href="assets/pages/img/Logo/ada.jpg" class="fancybox-button" title="Prof. Ada E. Yonath" data-rel="fancybox-button"><i class="fa fa-search"></i></a>
                 </em>
                 <a class="recent-work-description" href="javascript:;">
-                  <strong>Prof. Ada E. Yonath</strong>
-				  <b>Nobel laureate</b><br>
-                  <b>Director, The Helen and Milton A. Kimmelman Center for Biomolecular Structure and Assembly</b><br>
-				  <b>Weizmann Institute of Science, Rehovot, Israel</b>
+                  <strong>P D Babu</strong>
+				          <b>Scientist </b><br>
+                  <b>UGC-DAE </b><br>
+				          <b>CSR, Mumbai Centre, Maharastra</b>
                 </a>
               </div>              
               <div class="recent-work-item">
                 <em>
-                  <img src="assets/pages/img/Logo/Salam.jpeg" height="250" width="80" alt="Prof. Dr. K.N.S.Sirajudeen">
+                  <img src="assets/pages/img/Logo/Salam.jpeg" height="250" width="80" alt="Dr. Tharamani">
                   <a href="https://www.iium.edu.my/directory/show/9547" target="_blank"><i class="fa fa-link"></i></a>
                   <a href="assets/pages/img/works/Salam.jpeg" class="fancybox-button" title="Prof. Dr. K.N.S.Sirajudeen" data-rel="fancybox-button"><i class="fa fa-search"></i></a>
                 </em>
                 <a class="recent-work-description" href="javascript:;">
-                  <strong>Prof. Dr. K.N.S.Sirajudeen </strong>
-                  <b>Professor,</b><br> <b>Head, Kulliyyah of Medicine</b><br>
-				  <b>International Islamic University Malaysia, Malaysia</b>
+                  <strong>Dr. Tharamani</strong>
+                  <b>Professor &amp; Head</b><br> <b>HIIT -Ropar</b><br>
+				          <b>Panjab</b>
                 </a>
               </div>			  
             </div>       
@@ -202,38 +202,40 @@
             <div class="owl-carousel owl-carousel4">
 			<div class="recent-work-item">
                 <em>
-                  <img src="assets/pages/img/Logo/Shukla.jpg" height="250" width="80" alt="Dr A.K. Shukla">
+                  <img src="assets/pages/img/Logo/Shukla.jpg" height="250" width="80" alt="E. Bhoje Gowd">
 				  <a href="https://iiscprofiles.irins.org/profile/54762" target="_blank"><i class="fa fa-link"></i></a>
                   <a href="assets/pages/img/Logo/Shukla.jpg" class="fancybox-button" title="Dr A.K. Shukla" data-rel="fancybox-button"><i class="fa fa-search"></i></a>                
 				  </em><a class="recent-work-description" href="javascript:;">
-                  <strong>Dr A.K. Shukla</strong>
-                  <b>Former Director, Cecri, Karaikudi & Emeritus Processor</b><br>
-				  <b>Solid State and Structural Chemistry Unit, Indian Institute of Science, Bangalore</b>			  
+                  <strong>E. Bhoje Gowd</strong>
+                  <b>FSenior Principal Scientist and Professor (AcSIR)</b><br>
+				          <b>CSIR-NIIST, Trivandrum</b><br>
+                  <b>IndiaProf. Dr. DVR. Saigopal</b><br>
+                  <b>Founder Vice chancellor, Cluster university, Kurnool, Andhra Pradesh</b>		  
                 </a>
               </div>
 			  <div class="recent-work-item">
                 <em>
-                  <img src="assets/pages/img/Logo/thangraj.jpg" height="250" width="80" alt="Dr. Kumarswamy Thangaraj">
+                  <img src="assets/pages/img/Logo/thangraj.jpg" height="250" width="80" alt="Subba Rao Gangi Setty">
 				  <a href="https://www.ccmb.res.in/People/Research-Group/K-Thangaraj" target="_blank"><i class="fa fa-link"></i></a>
                   <a href="assets/pages/img/Logo/thangraj.jpg" class="fancybox-button" title="Dr. Kumarswamy Thangaraj" data-rel="fancybox-button"><i class="fa fa-search"></i></a>                </em>
                 <a class="recent-work-description" href="javascript:;">
-                  <strong>Dr. Kumarswamy Thangaraj</strong>
-                  <b>Director</b><br>
-				  <b>Centre for DNA Fingerprinting and Diagnostics (CDFD)</b><br>
-				  <b>National Genomics Core (NGC)</b><br>
-     			  <b>Hyderabad 500039, Telangana, India</b>
+                  <strong>Subba Rao Gangi Setty</strong>
+                  <b>Professor</b><br>
+				          <b>Dep. of Microbiology & Cell Biology</b><br>
+				          <b>Indian Institute of Science</b><br>
+     			        <b>Bangalore, Karnataka</b>
                 </a>
               </div>
 			  <div class="recent-work-item">
                 <em>
-                  <img src="assets/pages/img/Logo/senthil.jpg" height="250" width="80" alt="Pau-Loke SHOW">
+                  <img src="assets/pages/img/Logo/senthil.jpg" height="250" width="80" alt="Prof. Dr. DVR Saigopal">
 				  <a href="https://www.nipgr.ac.in/research/dr_skmuthappa.php" target="_blank"><i class="fa fa-link"></i></a>
                   <a href="assets/pages/img/Logo/senthil.jpg" class="fancybox-button" title="Dr. Senthil Kumar Muthappa" data-rel="fancybox-button"><i class="fa fa-search"></i></a>                </em>
                 <a class="recent-work-description" href="javascript:;">
-                  <strong>Dr. Senthil Kumar Muthappa</strong>
-                  <b>Staff Scientist-V</b><br>
-				  <b>National Institute of Plant Genome Research</b><br>
-				  <b>New Delhi, India</b>     			
+                  <strong>Prof. Dr. DVR Saigopal</strong>
+                  <b>Founder Vice Chancellor</b><br>
+				          <b>Cluster University</b><br>
+				          <b>Kurnool, Andhra Pradesh</b>     			
                 </a>
               </div>
 			  <div class="recent-work-item">
@@ -303,7 +305,7 @@
         <div class="row">
           <!-- BEGIN COPYRIGHT -->
           <div class="col-md-4 col-sm-4 padding-top-10">
-            2022 © REVA University. ALL Rights Reserved.
+            2024 © REVA University. ALL Rights Reserved.
           </div>
           <!-- END COPYRIGHT -->
           
