chnaged images in speaker

--- a/speakers.html
+++ b/speakers.html
@@ -157,7 +157,7 @@
             <div class="owl-carousel owl-carousel4">
 			<div class="recent-work-item">
                 <em>
-                  <img src="assets/pages/img/Logo/show_1.jpg" height="250" width="80" alt="Harish Barshilia">
+                  <img src="assets/pages/img/Logo/Harish Barshilia.jpeg" height="250" width="80" alt="Harish Barshilia">
 				  <a href="https://showpauloke.com" target="_blank"><i class="fa fa-link"></i></a>
                   <a href="assets/pages/img/Logo/show_1.jpg" class="fancybox-button" title="Prof. ls. Ts. Dr. Pau-Loke SHOW" data-rel="fancybox-button"><i class="fa fa-search"></i></a>                </em>
                 <a class="recent-work-description" href="javascript:;">
@@ -171,7 +171,7 @@
               </div>
               <div class="recent-work-item">
                 <em>
-                  <img src="assets/pages/img/Logo/ada.jpg" height="250" width="80" alt="P D Babu">
+                  <img src="assets/pages/img/Logo/P D Babu.jpeg" height="250" width="80" alt="P D Babu">
                   <a href="http://www.weizmann.ac.il/csb/faculty_pages/Yonath/" target="_blank"><i class="fa fa-link"></i></a>
                   <a href="assets/pages/img/Logo/ada.jpg" class="fancybox-button" title="Prof. Ada E. Yonath" data-rel="fancybox-button"><i class="fa fa-search"></i></a>
                 </em>
@@ -184,7 +184,7 @@
               </div>              
               <div class="recent-work-item">
                 <em>
-                  <img src="assets/pages/img/Logo/Salam.jpeg" height="250" width="80" alt="Dr. Tharamani">
+                  <img src="assets/pages/img/Logo/Dr. Tharamani.jpeg" height="250" width="80" alt="Dr. Tharamani">
                   <a href="https://www.iium.edu.my/directory/show/9547" target="_blank"><i class="fa fa-link"></i></a>
                   <a href="assets/pages/img/works/Salam.jpeg" class="fancybox-button" title="Prof. Dr. K.N.S.Sirajudeen" data-rel="fancybox-button"><i class="fa fa-search"></i></a>
                 </em>
@@ -202,7 +202,7 @@
             <div class="owl-carousel owl-carousel4">
 			<div class="recent-work-item">
                 <em>
-                  <img src="assets/pages/img/Logo/Shukla.jpg" height="250" width="80" alt="E. Bhoje Gowd">
+                  <img src="assets/pages/img/Logo/E. Bhoje Gowd.jpeg" height="250" width="80" alt="E. Bhoje Gowd">
 				  <a href="https://iiscprofiles.irins.org/profile/54762" target="_blank"><i class="fa fa-link"></i></a>
                   <a href="assets/pages/img/Logo/Shukla.jpg" class="fancybox-button" title="Dr A.K. Shukla" data-rel="fancybox-button"><i class="fa fa-search"></i></a>                
 				  </em><a class="recent-work-description" href="javascript:;">
@@ -215,7 +215,7 @@
               </div>
 			  <div class="recent-work-item">
                 <em>
-                  <img src="assets/pages/img/Logo/thangraj.jpg" height="250" width="80" alt="Subba Rao Gangi Setty">
+                  <img src="assets/pages/img/Logo/Subba Rao Gangi Setty.jpeg" height="250" width="80" alt="Subba Rao Gangi Setty">
 				  <a href="https://www.ccmb.res.in/People/Research-Group/K-Thangaraj" target="_blank"><i class="fa fa-link"></i></a>
                   <a href="assets/pages/img/Logo/thangraj.jpg" class="fancybox-button" title="Dr. Kumarswamy Thangaraj" data-rel="fancybox-button"><i class="fa fa-search"></i></a>                </em>
                 <a class="recent-work-description" href="javascript:;">
@@ -228,7 +228,7 @@
               </div>
 			  <div class="recent-work-item">
                 <em>
-                  <img src="assets/pages/img/Logo/senthil.jpg" height="250" width="80" alt="Prof. Dr. DVR Saigopal">
+                  <img src="assets/pages/img/Logo/Prof. Dr. DVR Saigopal.jpeg" height="250" width="80" alt="Prof. Dr. DVR Saigopal">
 				  <a href="https://www.nipgr.ac.in/research/dr_skmuthappa.php" target="_blank"><i class="fa fa-link"></i></a>
                   <a href="assets/pages/img/Logo/senthil.jpg" class="fancybox-button" title="Dr. Senthil Kumar Muthappa" data-rel="fancybox-button"><i class="fa fa-search"></i></a>                </em>
                 <a class="recent-work-description" href="javascript:;">
