changed Dr. Nellaiah Hariharan head to Dr. Nellaiah Hariharan

--- a/speakers.html
+++ b/speakers.html
@@ -13,8 +13,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <meta content="Metronic Shop UI description" name="2nd International Conference on Global Trends in Applied Sciences, Medical and Health Sciences">
-  <meta content="Metronic Shop UI keywords" name="Biotechnology, Conference, Bangalore, Conference at Bangalore, ">
+  <meta content="Metronic Shop UI description" name="4th International Conference on Global Trends in Applied Sciences, Medical and Health Sciences">
+  <meta content="Metronic Shop UI keywords" name="Physical, Conference, Bangalore, Conference at Bangalore, ">
   <meta content="keenthemes" name="School of Applied Sciences, REVA University">
 
   <meta property="og:site_name" content="-CUSTOMER VALUE-">
