--- a/Committee.html
+++ b/Committee.html
@@ -268,7 +268,7 @@
                                     </div>
                                     <div class="col-md-6">                                        
                                         <li><b>Dr. Bony De Kumar</b>, Director of Operations, Yale Genome Analysis Center, Yale University, Connecticut, USA</li>
-                                        <li><b>Dr. Nellaiah Hariharan Head</b>, R & D and Training, Bangalore Biotech Labs. Pvt. Ltd. (BiOZEEN) Bengaluru, Karnataka, India</li>
+                                        <li><b>Dr. Nellaiah Hariharan</b>, Head, R & D and Training, Bangalore Biotech Labs. Pvt. Ltd. (BiOZEEN) Bengaluru, Karnataka, India</li>
                                         <li><b>Prof. Sreeramanan Subramaniam</b>, School of Biological Sciences & Centre for Chemical Biology (CCB), Universiti Sains Malaysia (USM), Penang, Malaysia</li>
                                         <li><b>Prof. Kondaiah</b>, Emiretus Professor, Indian Institute of Sciences, (IISc), Bangalore</li>
                                         <li><b>Dr. Kumar Kothapalli</b>, Dell Medical School, The University of Texas at Austin, USA</li>
