--- a/speakers.html
+++ b/speakers.html
@@ -158,8 +158,8 @@
 			<div class="recent-work-item">
                 <em>
                   <img src="assets/pages/img/Logo/Harish Barshilia.jpeg" height="250" width="80" alt="Harish Barshilia">
-				  <a href="https://showpauloke.com" target="_blank"><i class="fa fa-link"></i></a>
-                  <a href="assets/pages/img/Logo/show_1.jpg" class="fancybox-button" title="Prof. ls. Ts. Dr. Pau-Loke SHOW" data-rel="fancybox-button"><i class="fa fa-search"></i></a>                </em>
+				  <a href="https://www.nal.res.in/en/dr-harish-c-barshilia-fnae-fnasc " target="_blank"><i class="fa fa-link"></i></a>
+                  <a href="assets/pages/img/Logo/Harish Barshilia.jpeg" class="fancybox-button" title="Harish Barshilia" data-rel="fancybox-button"><i class="fa fa-search"></i></a>                </em>
                 <a class="recent-work-description" href="javascript:;">
                   <strong>Harish Barshilia</strong>
                   <b>Chief Scientist and Head</b><br>
@@ -172,8 +172,8 @@
               <div class="recent-work-item">
                 <em>
                   <img src="assets/pages/img/Logo/P D Babu.jpeg" height="250" width="80" alt="P D Babu">
-                  <a href="http://www.weizmann.ac.il/csb/faculty_pages/Yonath/" target="_blank"><i class="fa fa-link"></i></a>
-                  <a href="assets/pages/img/Logo/ada.jpg" class="fancybox-button" title="Prof. Ada E. Yonath" data-rel="fancybox-button"><i class="fa fa-search"></i></a>
+                  <a href="https://www.csr.res.in/Faculty/profile/884/888/Dr.P%20DBabu" target="_blank"><i class="fa fa-link"></i></a>
+                  <a href="assets/pages/img/Logo/P D Babu.jpeg" class="fancybox-button" title="P D Babu" data-rel="fancybox-button"><i class="fa fa-search"></i></a>
                 </em>
                 <a class="recent-work-description" href="javascript:;">
                   <strong>P D Babu</strong>
@@ -185,8 +185,8 @@
               <div class="recent-work-item">
                 <em>
                   <img src="assets/pages/img/Logo/Dr. Tharamani.jpeg" height="250" width="80" alt="Dr. Tharamani">
-                  <a href="https://www.iium.edu.my/directory/show/9547" target="_blank"><i class="fa fa-link"></i></a>
-                  <a href="assets/pages/img/works/Salam.jpeg" class="fancybox-button" title="Prof. Dr. K.N.S.Sirajudeen" data-rel="fancybox-button"><i class="fa fa-search"></i></a>
+                  <a href="https://www.iitrpr.ac.in/tharamani-cn" target="_blank"><i class="fa fa-link"></i></a>
+                  <a href="assets/pages/img/Logo/Dr. Tharamani.jpeg" class="fancybox-button" title="Dr. Tharamani" data-rel="fancybox-button"><i class="fa fa-search"></i></a>
                 </em>
                 <a class="recent-work-description" href="javascript:;">
                   <strong>Dr. Tharamani</strong>
@@ -203,8 +203,8 @@
 			<div class="recent-work-item">
                 <em>
                   <img src="assets/pages/img/Logo/E. Bhoje Gowd.jpeg" height="250" width="80" alt="E. Bhoje Gowd">
-				  <a href="https://iiscprofiles.irins.org/profile/54762" target="_blank"><i class="fa fa-link"></i></a>
-                  <a href="assets/pages/img/Logo/Shukla.jpg" class="fancybox-button" title="Dr A.K. Shukla" data-rel="fancybox-button"><i class="fa fa-search"></i></a>                
+				          <a href="https://www.niist.res.in/dr-e-bhoje-gowd" target="_blank"><i class="fa fa-link"></i></a>
+                  <a href="assets/pages/img/Logo/E. Bhoje Gowd.jpeg" class="fancybox-button" title="E. Bhoje Gowd" data-rel="fancybox-button"><i class="fa fa-search"></i></a>                
 				  </em><a class="recent-work-description" href="javascript:;">
                   <strong>E. Bhoje Gowd</strong>
                   <b>FSenior Principal Scientist and Professor (AcSIR)</b><br>
@@ -216,8 +216,8 @@
 			  <div class="recent-work-item">
                 <em>
                   <img src="assets/pages/img/Logo/Subba Rao Gangi Setty.jpeg" height="250" width="80" alt="Subba Rao Gangi Setty">
-				  <a href="https://www.ccmb.res.in/People/Research-Group/K-Thangaraj" target="_blank"><i class="fa fa-link"></i></a>
-                  <a href="assets/pages/img/Logo/thangraj.jpg" class="fancybox-button" title="Dr. Kumarswamy Thangaraj" data-rel="fancybox-button"><i class="fa fa-search"></i></a>                </em>
+				        <a href="https://mcb.iisc.ac.in/research-single/subba-rao-gangi-setty" target="_blank"><i class="fa fa-link"></i></a>
+                  <a href="assets/pages/img/Logo/Subba Rao Gangi Setty.jpeg" class="fancybox-button" title="Subba Rao Gangi Setty" data-rel="fancybox-button"><i class="fa fa-search"></i></a>                </em>
                 <a class="recent-work-description" href="javascript:;">
                   <strong>Subba Rao Gangi Setty</strong>
                   <b>Professor</b><br>
@@ -229,8 +229,8 @@
 			  <div class="recent-work-item">
                 <em>
                   <img src="assets/pages/img/Logo/Prof. Dr. DVR Saigopal.jpeg" height="250" width="80" alt="Prof. Dr. DVR Saigopal">
-				  <a href="https://www.nipgr.ac.in/research/dr_skmuthappa.php" target="_blank"><i class="fa fa-link"></i></a>
-                  <a href="assets/pages/img/Logo/senthil.jpg" class="fancybox-button" title="Dr. Senthil Kumar Muthappa" data-rel="fancybox-button"><i class="fa fa-search"></i></a>                </em>
+				  <a href="https://clusteruniversity.org/voice_chacellor_mess.html" target="_blank"><i class="fa fa-link"></i></a>
+                  <a href="assets/pages/img/Logo/Prof. Dr. DVR Saigopal.jpeg" class="fancybox-button" title="Prof. Dr. DVR Saigopal" data-rel="fancybox-button"><i class="fa fa-search"></i></a>                </em>
                 <a class="recent-work-description" href="javascript:;">
                   <strong>Prof. Dr. DVR Saigopal</strong>
                   <b>Founder Vice Chancellor</b><br>
