changed application form to be more precise

--- a/application.html
+++ b/application.html
@@ -150,18 +150,10 @@
             <h1>Application form</h1>
             <div class="content-page">              
               <p>
-			  For any registration queries and other payment methods like bank transfers and PayPal feel free to reach us at <a href="mailto:conference.soas@reva.edu.in" target="_blank">conference.soas@reva.edu.in</a><br>
-
-For any conference related queries feel free to reach us at <a href="mailto:conference.soas@reva.edu.in" target="_blank">conference.soas@reva.edu.in</a></p>
-<p>Application form link: <a href="https://docs.google.com/forms/d/e/1FAIpQLSfTTRbGXoSDeZvBJ1jOtOa8VEgmFhlSFVqe6JCHJOYARAPkPw/viewform" target="_blank">ICGTSTAS-2024 Application Forms</a></p>
-<p> Join with WhatsApp Group only for the Conference registered participants <a href="https://chat.whatsapp.com/Ia1pbKoAuapLlyFsoXvt3c" target="_blank">ICGTSTAS-2024 WhatsApp Group</a></p>
-<div class="col-md-12">
-<p><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfTTRbGXoSDeZvBJ1jOtOa8VEgmFhlSFVqe6JCHJOYARAPkPw/viewform" width="640" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></p>
-
-
-</div>
-
-
+			          For any registration queries and other payment methods or any conference related queries feel free to reach us at<a href="mailto:conference.soas@reva.edu.in" target="_blank">conference.soas@reva.edu.in</a><br>
+              </p>
+              <p>Application form link: <a href="https://docs.google.com/forms/d/e/1FAIpQLSfTTRbGXoSDeZvBJ1jOtOa8VEgmFhlSFVqe6JCHJOYARAPkPw/viewform" target="_blank">ICGTSTAS-2024 Application Forms</a></p><br>
+              <p> Join with WhatsApp Group only for the Conference registered participants <a href="https://chat.whatsapp.com/Ia1pbKoAuapLlyFsoXvt3c" target="_blank">ICGTSTAS-2024 WhatsApp Group</a></p>
           </div>
           <!-- END CONTENT -->
         </div>
@@ -174,7 +166,7 @@ For any conference related queries feel free to reach us at <a href="mailto:conf
         <div class="row">
           <!-- BEGIN COPYRIGHT -->
           <div class="col-md-4 col-sm-4 padding-top-10">
-            2022 © REVA University. ALL Rights Reserved.
+            2024 © REVA University. ALL Rights Reserved.
           </div>
           <!-- END COPYRIGHT -->
           
